[package]
name = "wiki"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.biel@anixe.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
reqwest   = { version = "0.10.0-alpha.2", features = ["blocking", "json"] }
serde     = { version = "1.0.102", features = ["derive"] }
